# regaudit-fhe

./: .gitignore  CHANGELOG.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  LICENSE-COMMERCIAL.md  LICENSING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml
benchmarks/: bench_all.py  bench_fhe.py
benchmarks/results/: SUMMARY.md  bench_all.json  bench_fhe_14.json  bench_fhe_15.json
docs/: API.md  DEPLOYMENT.md  SUPPLY_CHAIN.md  THREAT_MODEL.md
docs/roadmap/: openfhe_backend.md
docs/specs/: 01_egf_imss.md  02_etk_fpa_hbc.md  03_esc_cia.md  04_ecp_qssp.md  05_ew1_cdsf.md  06_ecmd_jps.md
examples/: 01_client_local_audit.py  02_client_to_regulator.py  03_regulator_verify.py  04_cli_roundtrip.sh  benchmark_reproduce.py  openfhe_fairness_roundtrip.py  regulator_verify_signature.py  server_client.py  signed_envelope.py
schemas/: calibration.output.schema.json  concordance.input.schema.json  drift.input.schema.json  drift.output.schema.json  fairness.output.schema.json
scripts/: build_api_docs.sh
src/regaudit_fhe/: __init__.py  _slot.py  _validation.py  cli.py  dp.py  ecmd_jps.py  ecp_qssp.py  egf_imss.py  esc_cia.py  etk_fpa_hbc.py  ew1_cdsf.py  reports.py  schemas.py  server.py  trust.py
src/regaudit_fhe/backends/: __init__.py  openfhe.py
src/regaudit_fhe/fhe/: __init__.py  backends.py  context.py  openfhe.py  params.py  primitives.py  slot_vec.py
src/regaudit_fhe/schemas/: calibration.input.schema.json  concordance.output.schema.json  disagreement.input.schema.json  disagreement.output.schema.json  envelope.schema.json  fairness.input.schema.json  provenance.input.schema.json  provenance.output.schema.json
tests/: test_backends.py  test_commitments.py  test_dp.py  test_edge_cases.py  test_envelope_robustness.py  test_envelope_security.py  test_envelope_signatures.py  test_fhe_equivalence_matrix.py  test_key_provider.py  test_openfhe_backend.py  test_params_validation.py  test_precision_bounds.py  test_primitives_concurrency.py  test_property_based.py  test_schema_validation.py  test_schemas.py  test_server.py  test_server_hardening.py  test_smoke.py  test_tenseal_backend.py  test_trust_store.py
whitepaper/: .gitignore
