[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regaudit-fhe"
version = "0.0.1"
description = "Encrypted regulatory audit primitives for AI systems under FHE-CKKS depth-6"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "VaultBytes Innovations Ltd", email = "b@vaultbytes.com" },
  { name = "Bader Alissaei", email = "b@vaultbytes.com" },
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering",
  "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
fhe = [
  "openfhe>=1.2.0",
]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/BAder82t/regaudit-fhe"
Issues = "https://github.com/BAder82t/regaudit-fhe/issues"

[project.scripts]
regaudit-fhe = "regaudit_fhe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
