[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regaudit-fhe"
version = "0.0.7"
description = "Depth-tracked regulatory audit primitives for future FHE-CKKS execution."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "VaultBytes Innovations Ltd", email = "b@vaultbytes.com" },
  { name = "Bader Alissaei", email = "b@vaultbytes.com" },
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Topic :: Security :: Cryptography",
  "Topic :: Scientific/Engineering",
  "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "numpy>=1.26",
  "cryptography>=42",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
fhe = [
  "tenseal>=0.3.14",
]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "mypy>=1.10",
  "bandit>=1.7",
  "httpx>=0.27",
  "hypothesis>=6",
  "psutil>=5",
]

[project.urls]
Homepage = "https://github.com/BAder82t/regaudit-fhe"
Issues = "https://github.com/BAder82t/regaudit-fhe/issues"

[project.scripts]
regaudit-fhe = "regaudit_fhe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, B: bugbear, S: bandit-equivalent,
# UP: pyupgrade, I: isort, SIM: simplify, RUF: ruff-native, A: builtins.
select = ["E", "F", "W", "B", "S", "UP", "I", "SIM", "RUF", "A"]
ignore = [
  "E501",   # line length is enforced by formatter, not lint
  "B008",   # FastAPI Depends(...) defaults are idiomatic
  "SIM108", # ternaries hurt readability for crypto branches
  "S101",   # asserts in src are runtime sanity guards, not auth checks
  "RUF001", # ambiguous unicode (Greek letters) appear in math docstrings
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104", "S105", "S106", "S311", "RUF043"]
"benchmarks/**" = ["S101", "S311"]
"examples/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.10"
files = ["src/regaudit_fhe"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-q", "--strict-markers", "--strict-config"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["regaudit_fhe"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", "benchmarks", "examples", ".venv"]
skips = ["B101"]  # assert use is fine in src too (sanity guards)
